--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -237,6 +237,11 @@
     margin-top: $sp-2;
   }
 
+
+  .text-subheader {
+    color: #508397;
+  }
+
   .text-orange {
     color:rgb(224, 96, 0);
   }
